Update Standardize code