@@ -2,15 +2,10 @@ package com.loktar.learn.jdk8;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MethodReference {
     public static void main(String[] args) {
         List<String> names = Arrays.asList("Alex", "Bob", "Charlie");
-        //常规写法
-        for (int i = 0; i < names.size(); i++) {
-            System.out.println(names.get(i));
-        }
         for (String key : names) {
             System.out.println(key);
         }
@@ -25,10 +20,10 @@ public class MethodReference {
 
         List<Integer> lengths1 = names.stream().map(name -> {
             return name.length();
-        }).collect(Collectors.toList());
+        }).toList();
 
         //构造方法引用
-        List<Integer> lengths2 = names.stream().map(String::length).collect(Collectors.toList());
+        List<Integer> lengths2 = names.stream().map(String::length).toList();
 
     }
 }
