@@ -10,7 +10,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class ExcelMain {
@@ -21,7 +20,7 @@ public class ExcelMain {
         List<String> fileList = paths
                 .filter(Files::isRegularFile)
                 .map(Path::toString)
-                .collect(Collectors.toList());
+                .toList();
         for (String filepath : fileList) {
             ZipSecureFile.setMinInflateRatio(-1.0d);
             InputStream oldInp = new FileInputStream(filepath);
